fix: Body overflowing when modal is open and scroll is fixed.
Fix bug that makes body overflow horizontally when modal open and the body's position is set to fixed.

--- a/content/sass/globalStyles.scss
+++ b/content/sass/globalStyles.scss
@@ -16,6 +16,10 @@
     }
 }
 
+body {
+    width: 100%;
+}
+
 section {
     padding: var(--section-spacing) var(--horizontal-padding);
     max-width: 1800px;
